Adds HTML5 doctype and language attribute
Introduces the HTML5 doctype for proper document structure.
Sets the language to English for improved accessibility.
Ensures the closing body tag is present for valid markup.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,4 +25,5 @@
     <footer>
         <p>&copy; 2025 Johnathon Smith | Florida </p>
     </footer>
+</body>
 </html>
