--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Holy Grail Layout Demo</title>
     <meta name="description" content="This is an example of the Holy Grail layout.">
     <meta name="author" content="Johnathon D Smith">
 </head>
