Adds meta information and new Florida section
Introduces meta tags for better SEO, including a description and author.

Adds an aside section showcasing Florida, featuring an image and a description of its attractions.

Updates CSS to style the new section and adjusts some existing styles for better layout.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Johnathon D Smith | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <meta name="description" content="Johnathon D Smith's personal page for WDD 130, showcasing my profile and interests.">
+    <meta name="author" content="Johnathon D Smith">
 </head>
 <body>
     <header>
@@ -23,6 +25,16 @@
             enhance my skills in web design and development.
         </p>
     </main>
+    <aside>
+        <h2>Florida, USA</h2>
+        <img src="https://cdn.getyourguide.com/img/tour/5ff9921b7574c.png/68.jpg"
+             alt="Florida State Flag" width="200">
+        <p>
+            Florida is known for its warm climate, beautiful beaches, and vibrant culture. It is a popular tourist
+            destination with attractions like Walt Disney World, Universal Studios, and the Everglades. The state
+            also has a rich history and diverse population, making it a unique place to live and visit.
+        </p>
+    </aside>
     <footer>
         <p>&copy; 2025 Johnathon Smith | Florida </p>
     </footer>
